[package]
name = "bevy_test"
version = "0.1.0"
authors = ["skhamis <skhamis@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.1"
bevy_mod_picking = "0.5.4"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
